--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -23,8 +23,8 @@
   </main>
 <p></p>
 <p></p>
-<form action="" id="isbn" style="display: none;">
-  <input type="text" placeholder="ENTER ISBN">
+<form action="{{url_for('booksearch')}}" id="isbn" style="display: none;" method="POST">
+  <input type="text" placeholder="ENTER ISBN" name="'isbn">
   <input type="submit" class="btn btn-sm btn-primary fw-bold border-green">
 </form>
 <script>
