Task: added funtionality for adding books with special characters in the name

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -24,7 +24,7 @@
 <p></p>
 <p></p>
 <form action="{{url_for('booksearch')}}" id="isbn" style="display: none;" method="POST">
-  <input type="text" placeholder="ENTER ISBN" name="'isbn">
+  <input type="text" placeholder="ENTER ISBN" name="isbn">
   <input type="submit" class="btn btn-sm btn-primary fw-bold border-green">
 </form>
 <script>
